tests/pos/arrays/arr-16.ts

/*@ leng :: (a: IArray<number>) => { number | v = (len a) } */
function leng(a) {
  return a.length;
}
